--- a/src/css/output.css
+++ b/src/css/output.css
@@ -571,31 +571,6 @@ video {
   }
 }
 
-.font-40{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-@media (min-width: 768px){
-  .font-40{
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-}
-
-@media (min-width: 1024px){
-  .font-40{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-}
-
-@media (min-width: 1536px){
-  .font-40{
-    font-size: 40px;
-  }
-}
-
 .font-28{
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -906,6 +881,51 @@ video {
   color: rgb(239 68 68 / var(--tw-text-opacity));
   --tw-content: '*';
   content: var(--tw-content);
+}
+
+.btn{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+@media (min-width: 768px){
+  .btn{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px){
+  .btn{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 1536px){
+  .btn{
+    font-size: 20px;
+  }
+}
+
+.btn{
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  transition-duration: 300ms;
+}
+
+@media (min-width: 1536px){
+  .btn{
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
 }
 
 .btn-primary{
@@ -1375,11 +1395,6 @@ video {
   height: 21px;
 }
 
-.size-\[25px\]{
-  width: 25px;
-  height: 25px;
-}
-
 .size-\[30px\]{
   width: 30px;
   height: 30px;
@@ -1390,14 +1405,34 @@ video {
   height: 34px;
 }
 
+.size-\[40px\]{
+  width: 40px;
+  height: 40px;
+}
+
 .size-\[42px\]{
   width: 42px;
   height: 42px;
 }
 
-.size-\[70px\]{
-  width: 70px;
-  height: 70px;
+.size-\[54px\]{
+  width: 54px;
+  height: 54px;
+}
+
+.size-\[\]{
+  width: ;
+  height: ;
+}
+
+.size-\[92px\]{
+  width: 92px;
+  height: 92px;
+}
+
+.size-\[80px\]{
+  width: 80px;
+  height: 80px;
 }
 
 .h-12{
@@ -1464,6 +1499,14 @@ video {
   min-height: 100vh;
 }
 
+.min-h-\[\]{
+  min-height: ;
+}
+
+.min-h-\[300px\]{
+  min-height: 300px;
+}
+
 .w-1\/2{
   width: 50%;
 }
@@ -1490,10 +1533,6 @@ video {
 
 .w-4{
   width: 1rem;
-}
-
-.w-4\/12{
-  width: 33.333333%;
 }
 
 .w-5{
@@ -1540,24 +1579,20 @@ video {
   width: 215px;
 }
 
+.w-\[22px\]{
+  width: 22px;
+}
+
 .w-\[240px\]{
   width: 240px;
 }
 
-.w-\[28px\]{
-  width: 28px;
-}
-
-.w-\[35px\]{
-  width: 35px;
+.w-\[30\%\]{
+  width: 30%;
 }
 
 .w-\[60px\]{
   width: 60px;
-}
-
-.w-\[80px\]{
-  width: 80px;
 }
 
 .w-\[8px\]{
@@ -1582,6 +1617,10 @@ video {
 
 .min-w-\[300px\]{
   min-width: 300px;
+}
+
+.max-w-\[100px\]{
+  max-width: 100px;
 }
 
 .max-w-\[150px\]{
@@ -1688,10 +1727,6 @@ video {
   justify-content: space-between;
 }
 
-.gap-10{
-  gap: 2.5rem;
-}
-
 .gap-3{
   gap: 0.75rem;
 }
@@ -1708,14 +1743,13 @@ video {
   gap: 1.5rem;
 }
 
+.gap-7{
+  gap: 1.75rem;
+}
+
 .gap-x-5{
   -moz-column-gap: 1.25rem;
        column-gap: 1.25rem;
-}
-
-.gap-x-8{
-  -moz-column-gap: 2rem;
-       column-gap: 2rem;
 }
 
 .gap-x-9{
@@ -1870,6 +1904,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded{
+  border-radius: 0.25rem;
+}
+
 .rounded-b-lg{
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
@@ -1892,6 +1930,10 @@ video {
 
 .border{
   border-width: 1px;
+}
+
+.border-2{
+  border-width: 2px;
 }
 
 .border-\[1\.5px\]{
@@ -1918,6 +1960,10 @@ video {
   border-top-width: 1px;
 }
 
+.border-dashed{
+  border-style: dashed;
+}
+
 .border-gray-dark{
   --tw-border-opacity: 1;
   border-color: rgb(8 32 32 / var(--tw-border-opacity));
@@ -1925,6 +1971,10 @@ video {
 
 .border-gray-dark\/20{
   border-color: rgb(8 32 32 / 0.2);
+}
+
+.border-gray-dark\/50{
+  border-color: rgb(8 32 32 / 0.5);
 }
 
 .border-gray-light{
@@ -1940,10 +1990,6 @@ video {
 .border-r-gray-100{
   --tw-border-opacity: 1;
   border-right-color: rgb(243 244 246 / var(--tw-border-opacity));
-}
-
-.border-t-transparent{
-  border-top-color: transparent;
 }
 
 .bg-\[\#082020\]\/70{
@@ -2012,6 +2058,10 @@ video {
   padding: 0.375rem;
 }
 
+.p-10{
+  padding: 2.5rem;
+}
+
 .p-2{
   padding: 0.5rem;
 }
@@ -2072,11 +2122,6 @@ video {
   padding-bottom: 0.375rem;
 }
 
-.py-12{
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -2102,9 +2147,34 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .py-\[11px\]{
   padding-top: 11px;
   padding-bottom: 11px;
+}
+
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.px-12{
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.\!px-5{
+  padding-left: 1.25rem !important;
+  padding-right: 1.25rem !important;
+}
+
+.\!px-4{
+  padding-left: 1rem !important;
+  padding-right: 1rem !important;
 }
 
 .pb-2{
@@ -2117,6 +2187,10 @@ video {
 
 .pb-5{
   padding-bottom: 1.25rem;
+}
+
+.pl-0{
+  padding-left: 0px;
 }
 
 .pl-1{
@@ -2167,6 +2241,10 @@ video {
   padding-top: 100px;
 }
 
+.text-center{
+  text-align: center;
+}
+
 .font-\[300\]{
   font-weight: 300;
 }
@@ -2197,6 +2275,11 @@ video {
 
 .italic{
   font-style: italic;
+}
+
+.\!text-default-yellow{
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 175 54 / var(--tw-text-opacity)) !important;
 }
 
 .\!text-red1{
@@ -2387,10 +2470,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.last\:border-b-0:last-child{
-  border-bottom-width: 0px;
-}
-
 .last\:border-b-transparent:last-child{
   border-bottom-color: transparent;
 }
@@ -2407,11 +2486,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .hover\:bg-\[\#183c44\]:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(24 60 68 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#D5E0E0\]:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(213 224 224 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#fcfcfc\]:hover{
@@ -2433,8 +2507,29 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   background-color: rgb(30 77 87 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-opacity-30:hover{
-  --tw-bg-opacity: 0.3;
+.hover\:bg-\[\#27AE60\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 174 96 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[rgb\(39\2c 174\2c 96\)\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 174 96 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[hsl\(145\2c 100\%\2c 77\%\)\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: hsl(145 100% 77% / var(--tw-bg-opacity));
+}
+
+.hover\:bg-green-700:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-green-600:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
 .hover\:text-red1:hover{
@@ -2518,23 +2613,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   opacity: 1;
 }
 
-.has-\[input\:checked\]\:border-b-default-green:has(input:checked){
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(39 174 96 / var(--tw-border-opacity));
-}
-
-.has-\[input\:checked\]\:border-t-default-green:has(input:checked){
-  --tw-border-opacity: 1;
-  border-top-color: rgb(39 174 96 / var(--tw-border-opacity));
-}
-
 .has-\[input\:checked\]\:bg-default-green\/10:has(input:checked){
   background-color: rgb(39 174 96 / 0.1);
-}
-
-.has-\[\.text-blue-600\]\:text-secondary:has(.text-blue-600){
-  --tw-text-opacity: 1;
-  color: rgb(255 108 62 / var(--tw-text-opacity));
 }
 
 .has-\[button\.text-blue-600\]\:text-secondary:has(button.text-blue-600){
@@ -2576,6 +2656,17 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   color: rgb(39 174 96 / var(--tw-text-opacity));
 }
 
+@media (min-width: 400px){
+  .xs\:size-\[50px\]{
+    width: 50px;
+    height: 50px;
+  }
+
+  .xs\:w-auto{
+    width: auto;
+  }
+}
+
 @media (min-width: 640px){
   .sm\:my-6{
     margin-top: 1.5rem;
@@ -2602,9 +2693,19 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     display: none;
   }
 
+  .sm\:size-\[25px\]{
+    width: 25px;
+    height: 25px;
+  }
+
   .sm\:size-\[40px\]{
     width: 40px;
     height: 40px;
+  }
+
+  .sm\:size-\[70px\]{
+    width: 70px;
+    height: 70px;
   }
 
   .sm\:w-1\/2{
@@ -2648,6 +2749,15 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     justify-content: space-between;
   }
 
+  .sm\:gap-5{
+    gap: 1.25rem;
+  }
+
+  .sm\:gap-x-8{
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
+  }
+
   .sm\:space-x-3 > :not([hidden]) ~ :not([hidden]){
     --tw-space-x-reverse: 0;
     margin-right: calc(0.75rem * var(--tw-space-x-reverse));
@@ -2672,6 +2782,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
   .sm\:border-none{
     border-style: none;
+  }
+
+  .sm\:p-5{
+    padding: 1.25rem;
   }
 
   .sm\:px-5{
@@ -2756,6 +2870,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
+
+  .md\:py-12{
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
 }
 
 @media (min-width: 1024px){
@@ -2803,6 +2922,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     max-width: 421px;
   }
 
+  .lg\:gap-10{
+    gap: 2.5rem;
+  }
+
   .lg\:px-4{
     padding-left: 1rem;
     padding-right: 1rem;
@@ -2810,6 +2933,30 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
   .lg\:sidebar-box-shadow{
     box-shadow: 0 0 15px #dfdfdf;
+  }
+}
+
+@media (min-width: 1280px){
+  .xl\:w-4\/12{
+    width: 33.333333%;
+  }
+
+  .xl\:w-8\/12{
+    width: 66.666667%;
+  }
+
+  .xl\:w-\[28px\]{
+    width: 28px;
+  }
+
+  .xl\:w-\[35px\]{
+    width: 35px;
+  }
+
+  .xl\:space-x-4 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 }
 
@@ -2830,6 +2977,15 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     top: calc(140px + 48px);
   }
 
+  .\32xl\:-mx-4{
+    margin-left: -1rem;
+    margin-right: -1rem;
+  }
+
+  .\32xl\:mb-4{
+    margin-bottom: 1rem;
+  }
+
   .\32xl\:mb-6{
     margin-bottom: 1.5rem;
   }
@@ -2844,6 +3000,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
   .\32xl\:ml-10{
     margin-left: 2.5rem;
+  }
+
+  .\32xl\:mr-10{
+    margin-right: 2.5rem;
   }
 
   .\32xl\:mt-0{
@@ -2935,6 +3095,11 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     height: 20px;
   }
 
+  .\32xl\:size-\[25px\]{
+    width: 25px;
+    height: 25px;
+  }
+
   .\32xl\:size-\[30px\]{
     width: 30px;
     height: 30px;
@@ -2955,12 +3120,26 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     height: 59px;
   }
 
+  .\32xl\:size-\[54px\]{
+    width: 54px;
+    height: 54px;
+  }
+
+  .\32xl\:size-\[92px\]{
+    width: 92px;
+    height: 92px;
+  }
+
   .\32xl\:h-\[140px\]{
     height: 140px;
   }
 
   .\32xl\:h-\[62px\]{
     height: 62px;
+  }
+
+  .\32xl\:min-h-\[400px\]{
+    min-height: 400px;
   }
 
   .\32xl\:w-10{
@@ -2981,10 +3160,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
   .\32xl\:w-60{
     width: 15rem;
-  }
-
-  .\32xl\:w-\[116px\]{
-    width: 116px;
   }
 
   .\32xl\:w-\[11px\]{
@@ -3027,6 +3202,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     width: 76px;
   }
 
+  .\32xl\:w-7{
+    width: 1.75rem;
+  }
+
   .\32xl\:min-w-\[200px\]{
     min-width: 200px;
   }
@@ -3043,6 +3222,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     gap: 1.5rem;
   }
 
+  .\32xl\:gap-7{
+    gap: 1.75rem;
+  }
+
   .\32xl\:gap-x-12{
     -moz-column-gap: 3rem;
          column-gap: 3rem;
@@ -3056,16 +3239,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     row-gap: 2rem;
   }
 
+  .\32xl\:space-x-2 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+    margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
   .\32xl\:space-x-3 > :not([hidden]) ~ :not([hidden]){
     --tw-space-x-reverse: 0;
     margin-right: calc(0.75rem * var(--tw-space-x-reverse));
     margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .\32xl\:space-x-4 > :not([hidden]) ~ :not([hidden]){
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1rem * var(--tw-space-x-reverse));
-    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .\32xl\:space-x-5 > :not([hidden]) ~ :not([hidden]){
@@ -3086,14 +3269,16 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     margin-bottom: calc(0.375rem * var(--tw-space-y-reverse));
   }
 
-  .\32xl\:space-y-10 > :not([hidden]) ~ :not([hidden]){
+  .\32xl\:space-y-12 > :not([hidden]) ~ :not([hidden]){
     --tw-space-y-reverse: 0;
-    margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
+    margin-top: calc(3rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(3rem * var(--tw-space-y-reverse));
   }
 
-  .\32xl\:p-10{
-    padding: 2.5rem;
+  .\32xl\:space-y-4 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(1rem * var(--tw-space-y-reverse));
   }
 
   .\32xl\:p-2{
@@ -3124,9 +3309,18 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding: 18px;
   }
 
+  .\32xl\:p-10{
+    padding: 2.5rem;
+  }
+
   .\32xl\:px-4{
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+
+  .\32xl\:px-5{
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
   }
 
   .\32xl\:px-6{
@@ -3183,8 +3377,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     padding-bottom: 1rem;
   }
 
-  .\32xl\:pb-5{
-    padding-bottom: 1.25rem;
+  .\32xl\:pb-6{
+    padding-bottom: 1.5rem;
   }
 
   .\32xl\:pb-8{
